correct visible on all devices

--- a/styles/glob/_global.scss
+++ b/styles/glob/_global.scss
@@ -11,7 +11,6 @@ body {
 // Wrapper
 .wrapper {
 	display: grid;
-	place-items: center;
 	min-height: 100vh;
 }
 
